project building and second commit

--- a/template/index.html
+++ b/template/index.html
@@ -8,14 +8,17 @@
     <title>Event Manager</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/materialize.min.css">
+    <link href="css/micon.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+    <!--<ul id="nav-mobile" class="sidenav sidenav-fixed">-->
+        <!--<li><a href="#!">First Sidebar Link</a></li>-->
+        <!--<li><a href="#!"><span class="material-icons">home</span> Second Sidebar Link</a></li>-->
+    <!--</ul>-->
+    <!--<a href="#" data-activates="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>-->
 
-    <ul id="slide-out" class="sidenav fixed">
-        <li><a href="#!">First Sidebar Link</a></li>
-        <li><a href="#!">Second Sidebar Link</a></li>
-    </ul>
-    <a href="#" data-activates="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
 
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/materialize.min.js"></script>
