--- a/template/index.html
+++ b/template/index.html
@@ -2,26 +2,86 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Event Manager</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/materialize.min.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/ghpages-materialize.css">
+    <!--<link rel="stylesheet" href="css/materialize.min.css">-->
     <link href="css/micon.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+    <div class="header">
+        <div class="header__overlay">
+            <div class="container">
+                <nav>
+                    <div class="nav-wrapper">
+                        <a href="#" class="brand-logo">EM</a>
+                        <ul id="nav-mobile" class="right hide-on-med-and-down">
+                            <li><a href="#"><i class="material-icons">search</i></a></li>
+                            <li><a href="signin.html">Sign In</a></li>
+                            <li><a href="signup.html">Sign Up</a></li>
+                        </ul>
+                    </div>
+                </nav>
 
-    <!--<ul id="nav-mobile" class="sidenav sidenav-fixed">-->
-        <!--<li><a href="#!">First Sidebar Link</a></li>-->
-        <!--<li><a href="#!"><span class="material-icons">home</span> Second Sidebar Link</a></li>-->
-    <!--</ul>-->
-    <!--<a href="#" data-activates="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>-->
+                <h4 class="animated fadeInLeft">Worlds Leading Startup events</h4>
+                <p class="animated fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Accusantium alias expedita ipsam iusto.</p>
+                <button class="btn blue-grey waves-effect animated fadeInLeft">Sign Up</button>
+            </div>
+        </div>
+        <!--End .header-->
+    </div>
 
-
+    <!--begin popular__events-->
+    <div class="popular__events_holdr">
+        <div class="container popular__events mt20">
+            <div class="row">
+                <div class="col s12 l4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">Card Title</span>
+                            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                        </div>
+                        <div class="card-content">
+                            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">Card Title</span>
+                            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                        </div>
+                        <div class="card-content">
+                            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">Card Title</span>
+                            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                        </div>
+                        <div class="card-content">
+                            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/materialize.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
