--- a/template/index.html
+++ b/template/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Event Manager</title>
     <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/ghpages-materialize.css">
+    <link rel="stylesheet" href="css/frameworks/ghpages-materialize.css">
     <!--<link rel="stylesheet" href="css/materialize.min.css">-->
-    <link href="css/micon.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
+    <link href="css/frameworks/micon.css" rel="stylesheet">
+    <link href="css/frameworks/animate.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
@@ -30,7 +30,7 @@
                 <h4 class="animated fadeInLeft">Worlds Leading Startup events</h4>
                 <p class="animated fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Accusantium alias expedita ipsam iusto.</p>
-                <button class="btn blue-grey waves-effect animated fadeInLeft">Sign Up</button>
+                <a href="signup.html" class="btn blue-grey waves-effect animated fadeInLeft">Sign Up</a>
             </div>
         </div>
         <!--End .header-->
