--- a/template/css/app.sass
+++ b/template/css/app.sass
@@ -7,12 +7,14 @@ $white: #fff
 $black: #000
 $transparent: transparent
 
-
 /*mixins*/
 @import "mixins"
 
+/*overwrites*/
+@import 'overwrite/overwrite'
+
 /*main css*/
-@import './main.css/main.sass'
+@import 'main-css/main'
 
 /*media query*/
 @import './media-query'
