--- a/template/css/app.css
+++ b/template/css/app.css
@@ -5,10 +5,14 @@
 /*mixins */
 /*padding mixins */
 /*Margin mixins */
+/*overwrites */
+.card-title {
+  padding: 14px !important;
+  font-size: 20px !important; }
+
 /*main css */
 .header {
-  width: 100vw;
-  height: 50vh;
+  height: 60vh;
   display: block;
   position: relative;
   background-image: url("../image/1.jpg");
@@ -35,13 +39,17 @@
       transition: all 500ms ease-in-out; }
       .header .header__overlay .container nav ul a:hover {
         background-color: rgba(0, 0, 0, 0.5) !important; }
+    .header .header__overlay .container .header__detail {
+      margin-top: 45px; }
+      .header .header__overlay .container .header__detail h4 {
+        font-weight: 100;
+        font-size: 2.5em; }
 
 .isLoaded {
   transform: translateY(0px) !important;
   opacity: 1 !important; }
 
 .popular__events_holdr {
-  z-index: 1;
   margin-top: -100px !important; }
   .popular__events_holdr .popular__events {
     padding: 20px;
