--- a/template/index.html
+++ b/template/index.html
@@ -16,7 +16,7 @@
     <div class="header">
         <div class="header__overlay">
             <div class="container">
-                <nav>
+                <nav class="animated fadeInDown">
                     <div class="nav-wrapper">
                         <a href="#" class="brand-logo">EM</a>
                         <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -27,10 +27,12 @@
                     </div>
                 </nav>
 
-                <h4 class="animated fadeInLeft">Worlds Leading Startup events</h4>
-                <p class="animated fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Accusantium alias expedita ipsam iusto.</p>
-                <a href="signup.html" class="btn blue-grey waves-effect animated fadeInLeft">Sign Up</a>
+                <div class="center-align header__detail">
+                    <h4 class="animated fadeInLeft">Worlds Leading Startup events</h4>
+                    <p class="animated fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Accusantium alias expedita ipsam iusto.</p>
+                    <a href="signup.html" class="btn blue lighten-2 waves-effect animated fadeInLeft">Sign Up</a>
+                </div>
             </div>
         </div>
         <!--End .header-->
@@ -38,41 +40,19 @@
 
     <!--begin popular__events-->
     <div class="popular__events_holdr">
-        <div class="container popular__events mt20">
+        <div class="container popular__events">
+            <!--<h3>Latest Events</h3>-->
             <div class="row">
                 <div class="col s12 l4">
-                    <div class="card">
+                    <div class="card animated zoomIn">
                         <div class="card-image">
                             <img src="image/2.jpg">
-                            <span class="card-title">Card Title</span>
+                            <span class="card-title">Sat, Nov 25 8:00Am</span>
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
                         </div>
                         <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 l4">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="image/2.jpg">
-                            <span class="card-title">Card Title</span>
-                            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-                        </div>
-                        <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 l4">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="image/2.jpg">
-                            <span class="card-title">Card Title</span>
-                            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-                        </div>
-                        <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                            <p>A title for this event</p>
+                            <small>Muson center, Lagos</small>
                         </div>
                     </div>
                 </div>
