gh-pages-v2 wow integration

--- a/template/index.html
+++ b/template/index.html
@@ -16,7 +16,7 @@
     <div class="header">
         <div class="header__overlay">
             <div class="container">
-                <nav class="animated fadeInDown">
+                <nav class="wow fadeInDown">
                     <div class="nav-wrapper">
                         <a href="#" class="brand-logo">EM</a>
                         <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -28,8 +28,8 @@
                 </nav>
 
                 <div class="center-align header__detail">
-                    <h4 class="animated fadeInLeft">Worlds Leading Startup events</h4>
-                    <p class="animated fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    <h4 class="wow fadeInLeft">Worlds Leading Startup events</h4>
+                    <p class="wow fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Accusantium alias expedita ipsam iusto.</p>
                     <a href="signup.html" class="btn blue lighten-2 waves-effect animated fadeInLeft">Sign Up</a>
                 </div>
@@ -44,7 +44,7 @@
             <!--<h3>Latest Events</h3>-->
             <div class="row">
                 <div class="col s12 l4">
-                    <div class="card animated zoomIn">
+                    <div class="card wow zoomIn">
                         <div class="card-image">
                             <img src="image/2.jpg">
                             <span class="card-title">Sat, Nov 25 8:00Am</span>
@@ -62,6 +62,10 @@
 
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/materialize.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
     <script src="js/main.js"></script>
 </body>
 </html>
