--- a/template/index.html
+++ b/template/index.html
@@ -47,12 +47,44 @@
                     <div class="card wow zoomIn">
                         <div class="card-image">
                             <img src="image/2.jpg">
-                            <span class="card-title">Sat, Nov 25 8:00Am</span>
-                            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating halfway-fab waves-effect waves-light red">
+                                <i class="material-icons">share</i>
+                            </a>
                         </div>
                         <div class="card-content">
-                            <p>A title for this event</p>
-                            <small>Muson center, Lagos</small>
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00Am</p>
+                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="card wow zoomIn">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating halfway-fab waves-effect waves-light blue">
+                                <i class="material-icons">share</i>
+                            </a>
+                        </div>
+                        <div class="card-content">
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00Am</p>
+                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="card wow zoomIn">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating halfway-fab waves-effect waves-light amber">
+                                <i class="material-icons">share</i>
+                            </a>
+                        </div>
+                        <div class="card-content">
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00Am</p>
+                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos</small>
                         </div>
                     </div>
                 </div>
@@ -63,9 +95,10 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="js/main.js"></script>
     <script>
         new WOW().init();
+        $('.fixed-action-btn').openFAB();
     </script>
-    <script src="js/main.js"></script>
 </body>
 </html>
