--- a/template/css/overwrite/overwrite.sass
+++ b/template/css/overwrite/overwrite.sass
@@ -1,3 +1,8 @@
+.f15
+  @include margTop(5px !important)
+  font:
+    size: 15px !important
+
 .card-title
   @include pad(14px !important)
   font:
