--- a/template/css/app.sass
+++ b/template/css/app.sass
@@ -1,11 +1,8 @@
 .mt20
   margin-top: 20px !important
 
-/*defaulr colors*/
-$seagreen: seagreen
-$white: #fff
-$black: #000
-$transparent: transparent
+/*Partials*/
+@import 'partials'
 
 /*mixins*/
 @import "mixins"
