--- a/template/css/app.css
+++ b/template/css/app.css
@@ -1,6 +1,7 @@
 .mt20 {
   margin-top: 20px !important; }
 
+/*Partials */
 /*defaulr colors */
 /*mixins */
 /*padding mixins */
@@ -55,7 +56,46 @@
   margin-top: -100px !important; }
   .popular__events_holdr .popular__events {
     padding: 20px;
-    background-color: #FFF !important; }
+    background-color: #fff !important; }
+
+.middle__info {
+  width: 100%;
+  height: 260px;
+  display: block;
+  color: #fff;
+  position: relative;
+  background-color: #f5f5f5;
+  overflow: hidden; }
+  .middle__info .brief__info {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5); }
+    .middle__info .brief__info .container .center-align p {
+      padding: 15px; }
+  .middle__info .bg__overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0; }
+    .middle__info .bg__overlay img {
+      width: 100%; }
+
+.footer {
+  padding: 10px;
+  height: 64px;
+  color: #fff;
+  background-color: #333; }
+  .footer a {
+    background-image: linear-gradient(to top left, rgba(72, 132, 179, 0.7), rgba(144, 236, 146, 0.7));
+    background-image: -webkit-linear-gradient(to top left, rgba(72, 132, 179, 0.7), rgba(144, 236, 146, 0.7));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; }
+    .footer a:hover {
+      text-decoration: underline !important; }
 
 /*media query */
 
