--- a/template/css/main-css/main.sass
+++ b/template/css/main-css/main.sass
@@ -46,4 +46,50 @@
   .popular__events
     @include pad(20px)
     background:
-      color: #FFF !important
+      color: $white !important
+
+.middle__info
+  width: 100%
+  height: 260px
+  display: block
+  color: $white
+  position: relative
+  background:
+    color: #f5f5f5
+  overflow: hidden
+
+  .brief__info
+    width: 100%
+    height: 100%
+    position: absolute
+    top: 0
+    left: 0
+    background: $rgbaBlack
+
+    .container
+      .center-align
+        p
+          @include pad(15px)
+
+  .bg__overlay
+    width: 100%
+    height: 100%
+    position: absolute
+    top: 0
+    left: 0
+
+    img
+      width: 100%
+
+.footer
+  @include pad(10px)
+  height: 64px
+  color: $white
+  background:
+    color: #333
+
+  a
+    @include gradientText()
+
+    &:hover
+      text-decoration: underline !important
