--- a/template/index.html
+++ b/template/index.html
@@ -29,8 +29,7 @@
 
                 <div class="center-align header__detail">
                     <h4 class="wow fadeInLeft">Worlds Leading Startup events</h4>
-                    <p class="wow fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Accusantium alias expedita ipsam iusto.</p>
+                    <p class="wow fadeInLeft">Attend Events around you and Add Events.</p>
                     <a href="signup.html" class="btn blue lighten-2 waves-effect animated fadeInLeft">Sign Up</a>
                 </div>
             </div>
@@ -53,7 +52,7 @@
                             </a>
                         </div>
                         <div class="card-content">
-                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00Am</p>
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
                             <small><i class="material-icons f15">location_on</i> Muson center, Lagos</small>
                         </div>
                     </div>
@@ -68,7 +67,7 @@
                             </a>
                         </div>
                         <div class="card-content">
-                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00Am</p>
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
                             <small><i class="material-icons f15">location_on</i> Muson center, Lagos</small>
                         </div>
                     </div>
@@ -83,7 +82,97 @@
                             </a>
                         </div>
                         <div class="card-content">
-                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00Am</p>
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
+                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="card wow zoomIn">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating halfway-fab waves-effect waves-light red">
+                                <i class="material-icons">share</i>
+                            </a>
+                        </div>
+                        <div class="card-content">
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
+                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="card wow zoomIn">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating halfway-fab waves-effect waves-light blue">
+                                <i class="material-icons">share</i>
+                            </a>
+                        </div>
+                        <div class="card-content">
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
+                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="card wow zoomIn">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating halfway-fab waves-effect waves-light amber">
+                                <i class="material-icons">share</i>
+                            </a>
+                        </div>
+                        <div class="card-content">
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
+                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="card wow zoomIn">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating halfway-fab waves-effect waves-light red">
+                                <i class="material-icons">share</i>
+                            </a>
+                        </div>
+                        <div class="card-content">
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
+                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="card wow zoomIn">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating halfway-fab waves-effect waves-light blue">
+                                <i class="material-icons">share</i>
+                            </a>
+                        </div>
+                        <div class="card-content">
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
+                            <small><i class="material-icons f15">location_on</i> Muson center, Lagos</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="card wow zoomIn">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating halfway-fab waves-effect waves-light amber">
+                                <i class="material-icons">share</i>
+                            </a>
+                        </div>
+                        <div class="card-content">
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
                             <small><i class="material-icons f15">location_on</i> Muson center, Lagos</small>
                         </div>
                     </div>
@@ -91,14 +180,47 @@
             </div>
         </div>
     </div>
+    <!--End popular__event_holdr-->
 
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/materialize.min.js"></script>
+
+    <div class="middle__info">
+        <div class="bg__overlay">
+            <img src="image/2.jpg" alt="">
+        </div>
+        <div class="brief__info">
+            <div class="container">
+                <div class="center-align">
+                    <p>
+                    <h4>Do you want to Manage your Own Event?</h4>
+                    <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores,
+                        at aut consequuntur corporis culpa debitis dolores dolorum ducimus enim
+                        eos esse est eveniet excepturi expedita facilis illo incidunt inventore</small>
+                    <br />
+                    <a href="signup.html" class="btn waves-effect red darken-1">Sign Up</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="container">
+            <div class="center-align">
+                <p>© 2017, All rights reserved.
+                    <a href="#">Events Manager</a>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/materialize.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
     <script>
-        new WOW().init();
-        $('.fixed-action-btn').openFAB();
+        $(document).ready(function(){
+            new WOW().init();
+        });
     </script>
 </body>
 </html>
