--- a/template/index.html
+++ b/template/index.html
@@ -184,9 +184,9 @@
 
 
     <div class="middle__info">
-        <div class="bg__overlay">
-            <img src="image/2.jpg" alt="">
-        </div>
+        <!--<div class="bg__overlay">-->
+            <!--<img src="image/2.jpg" alt="">-->
+        <!--</div>-->
         <div class="brief__info">
             <div class="container">
                 <div class="center-align">
