--- a/template/css/app.css
+++ b/template/css/app.css
@@ -69,20 +69,13 @@
   .middle__info .brief__info {
     width: 100%;
     height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.5); }
+    background-image: url("../image/2.jpg");
+    background-color: rgba(0, 0, 0, 0.5);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover; }
     .middle__info .brief__info .container .center-align p {
       padding: 15px; }
-  .middle__info .bg__overlay {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0; }
-    .middle__info .bg__overlay img {
-      width: 100%; }
 
 .footer {
   padding: 10px;
@@ -96,6 +89,19 @@
     -webkit-text-fill-color: transparent; }
     .footer a:hover {
       text-decoration: underline !important; }
+
+/*signin css */
+.tabs .indicator {
+  background-color: #e0f2f1;
+  height: 60px;
+  opacity: 0.3; }
+
+.form-container {
+  padding: 40px;
+  padding-top: 10px; }
+
+.confirmation-tabs-btn {
+  position: absolute; }
 
 /*media query */
 
