--- a/template/css/main-css/main.sass
+++ b/template/css/main-css/main.sass
@@ -61,25 +61,30 @@
   .brief__info
     width: 100%
     height: 100%
-    position: absolute
-    top: 0
-    left: 0
-    background: $rgbaBlack
+    //position: absolute
+    //top: 0
+    //left: 0
+    background:
+      image: url("../image/2.jpg")
+      color: $rgbaBlack
+      attachment: fixed
+      repeat: no-repeat
+      size: cover
 
     .container
       .center-align
         p
           @include pad(15px)
 
-  .bg__overlay
-    width: 100%
-    height: 100%
-    position: absolute
-    top: 0
-    left: 0
-
-    img
-      width: 100%
+  //.bg__overlay
+  //  width: 100%
+  //  height: 100%
+  //  position: absolute
+  //  top: 0
+  //  left: 0
+  //
+  //  img
+  //    width: 100%
 
 .footer
   @include pad(10px)
