--- a/template/css/signin-css/signin.sass
+++ b/template/css/signin-css/signin.sass
@@ -15,6 +15,9 @@
 //height: 700px;
 //}
 
+.gradient__bg
+  @include gradientHoriz()
+
 .tabs .indicator
   background-color: #e0f2f1
   height: 60px
@@ -26,3 +29,7 @@
 
 .confirmation-tabs-btn
   position: absolute
+
+.signin__card_holdr
+  width: 60%
+  @include marg(41px auto)
