--- a/template/index.html
+++ b/template/index.html
@@ -13,6 +13,19 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+    <nav class="wow fadeInDown black-text gradient__bg home__nav">
+        <div class="container">
+            <div class="nav-wrapper">
+                <a href="#" class="brand-logo">EM</a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="#"><i class="material-icons">search</i></a></li>
+                    <li><a href="signin.html">Sign In</a></li>
+                    <li><a href="signup.html">Sign Up</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="header">
         <div class="header__overlay">
             <div class="container">
