--- a/template/signin.html
+++ b/template/signin.html
@@ -13,10 +13,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <div class="header">
-        <div class="header__overlay">
-            <div class="container">
-                <nav class="wow fadeInDown">
+    <!--<div class="header">-->
+        <!--<div class="header__overlay">-->
+            <nav class="wow fadeInDown black-text gradient__bg">
+                <div class="container">
                     <div class="nav-wrapper">
                         <a href="#" class="brand-logo">EM</a>
                         <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -25,23 +25,19 @@
                             <li><a href="signup.html">Sign Up</a></li>
                         </ul>
                     </div>
-                </nav>
-            </div>
-        </div>
-    </div>
+                </div>
+            </nav>
+        <!--</div>-->
+    <!--</div>-->
     <!--End header-->
 
     <div class="signin__card_holdr">
         <div class="container">
             <div class="container white z-depth-2">
-                <ul class="tabs teal">
-                    <li class="tab col s3"><a class="white-text active" href="#login">login</a></li>
-                    <li class="tab col s3"><a class="white-text" href="#register">register</a></li>
-                </ul>
-                <div id="login" class="col s12">
+                <div class="col s12">
                     <form class="col s12">
                         <div class="form-container">
-                            <h3 class="teal-text">Hello</h3>
+                            <h5 class="teal-text">Sign in to eManager</h5>
                             <div class="row">
                                 <div class="input-field col s12">
                                     <input id="email" type="email" class="validate">
@@ -55,56 +51,12 @@
                                 </div>
                             </div>
                             <br>
-                            <center>
-                                <button class="btn waves-effect waves-light teal" type="submit" name="action">Connect</button>
+                            <div class="center-align">
+                                <button class="btn waves-effect waves-light teal" type="submit" name="action">Sign In</button>
                                 <br>
                                 <br>
                                 <a href="">Forgotten password?</a>
-                            </center>
-                        </div>
-                    </form>
-                </div>
-                <div id="register" class="col s12">
-                    <form class="col s12">
-                        <div class="form-container">
-                            <h3 class="teal-text">Welcome</h3>
-                            <div class="row">
-                                <div class="input-field col s6">
-                                    <input id="last_name" type="text" class="validate">
-                                    <label for="last_name">First Name</label>
-                                </div>
-                                <div class="input-field col s6">
-                                    <input id="last_name" type="text" class="validate">
-                                    <label for="last_name">Last Name</label>
-                                </div>
                             </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input id="email" type="email" class="validate">
-                                    <label for="email">Email</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input id="email-confirm" type="email" class="validate">
-                                    <label for="email-confirm">Email Confirmation</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input id="password" type="password" class="validate">
-                                    <label for="password">Password</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input id="password-confirm" type="password" class="validate">
-                                    <label for="password-confirm">Password Confirmation</label>
-                                </div>
-                            </div>
-                            <center>
-                                <button class="btn waves-effect waves-light teal" type="submit" name="action">Submit</button>
-                            </center>
                         </div>
                     </form>
                 </div>
@@ -112,5 +64,24 @@
         </div>
     </div>
 
+    <div class="footer">
+        <div class="container">
+            <div class="center-align">
+                <p>© 2017, All rights reserved.
+                    <a href="#">Events Manager</a>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/main.js"></script>
+    <script>
+        $(document).ready(function(){
+            new WOW().init();
+        });
+    </script>
 </body>
 </html>
