--- a/template/css/app.css
+++ b/template/css/app.css
@@ -7,6 +7,16 @@
 /*padding mixins */
 /*Margin mixins */
 /*overwrites */
+nav {
+  box-shadow: none !important;
+  background-color: transparent !important;
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out; }
+  nav ul a:hover {
+    background-color: rgba(0, 0, 0, 0.5) !important; }
+
 .f15 {
   margin-top: 5px !important;
   font-size: 15px !important; }
@@ -18,14 +28,13 @@
 /*main css */
 .header {
   height: 60vh;
-  display: block;
   position: relative;
   background-image: url("../image/1.jpg");
   background-size: cover;
   background-attachment: fixed; }
   .header .header__overlay {
     width: 100%;
-    height: 100%;
+    height: 60vh;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -33,20 +42,14 @@
     background-image: -webkit-linear-gradient(to top left, rgba(72, 132, 179, 0.7), rgba(144, 236, 146, 0.7));
     overflow: hidden;
     color: #fff; }
-    .header .header__overlay .container nav {
-      box-shadow: none;
-      background-color: transparent !important;
-      -webkit-transition: all 500ms ease-in-out;
-      -moz-transition: all 500ms ease-in-out;
-      -o-transition: all 500ms ease-in-out;
-      transition: all 500ms ease-in-out; }
-      .header .header__overlay .container nav ul a:hover {
-        background-color: rgba(0, 0, 0, 0.5) !important; }
     .header .header__overlay .container .header__detail {
       margin-top: 45px; }
       .header .header__overlay .container .header__detail h4 {
         font-weight: 100;
         font-size: 2.5em; }
+
+.home__nav {
+  display: none; }
 
 .isLoaded {
   transform: translateY(0px) !important;
@@ -91,6 +94,10 @@
       text-decoration: underline !important; }
 
 /*signin css */
+.gradient__bg {
+  background-image: linear-gradient(to left, rgba(72, 132, 179, 0.7), rgba(144, 236, 146, 0.7));
+  background-image: -webkit-linear-gradient(to left, rgba(72, 132, 179, 0.7), rgba(144, 236, 146, 0.7)); }
+
 .tabs .indicator {
   background-color: #e0f2f1;
   height: 60px;
@@ -102,6 +109,10 @@
 
 .confirmation-tabs-btn {
   position: absolute; }
+
+.signin__card_holdr {
+  width: 60%;
+  margin: 41px auto; }
 
 /*media query */
 
