--- a/template/css/overwrite/overwrite.sass
+++ b/template/css/overwrite/overwrite.sass
@@ -1,3 +1,14 @@
+nav
+  box-shadow: none !important
+  background:
+    color: transparent !important
+  @include transit(500ms)
+
+  ul a
+    &:hover
+      background:
+        color: rgba(0, 0, 0, .5) !important
+
 .f15
   @include margTop(5px !important)
   font:
