--- a/template/signup.html
+++ b/template/signup.html
@@ -1,10 +1,100 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Event Manager</title>
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/frameworks/ghpages-materialize.css">
+    <!--<link rel="stylesheet" href="css/materialize.min.css">-->
+    <link href="css/frameworks/micon.css" rel="stylesheet">
+    <link href="css/frameworks/animate.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+    <nav class="wow fadeInDown black-text gradient__bg">
+        <div class="container">
+            <div class="nav-wrapper">
+                <a href="#" class="brand-logo">EM</a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="#"><i class="material-icons">search</i></a></li>
+                    <li><a href="signin.html">Sign In</a></li>
+                    <li><a href="signup.html">Sign Up</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <div class="signin__card_holdr">
+        <div class="container">
+            <div class="container white z-depth-2">
+                <div class="col s12">
+                    <form class="col s12">
+                        <div class="form-container">
+                            <h5 class="teal-text">Sign up to eManager</h5>
+                            <div class="row">
+                                <div class="input-field col s6">
+                                    <input id="first_name" type="text" class="validate">
+                                    <label for="last_name">First Name</label>
+                                </div>
+                                <div class="input-field col s6">
+                                    <input id="last_name" type="text" class="validate">
+                                    <label for="last_name">Last Name</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input id="reg_email" type="email" class="validate">
+                                    <label for="reg_email">Email</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input id="email-confirm" type="email" class="validate">
+                                    <label for="email-confirm">Email Confirmation</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input id="reg_password" type="password" class="validate">
+                                    <label for="reg_password">Password</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input id="password-confirm" type="password" class="validate">
+                                    <label for="password-confirm">Password Confirmation</label>
+                                </div>
+                            </div>
+                            <div class="center-align">
+                                <button class="btn waves-effect waves-light teal" type="submit" name="action">Sign Up</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="container">
+            <div class="center-align">
+                <p>© 2017, All rights reserved.
+                    <a href="#">Events Manager</a>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/main.js"></script>
+    <script>
+        $(document).ready(function(){
+            new WOW().init();
+        });
+    </script>
 </body>
 </html>
