--- a/template/index.html
+++ b/template/index.html
@@ -13,18 +13,20 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <nav class="wow fadeInDown black-text gradient__bg home__nav">
-        <div class="container">
-            <div class="nav-wrapper">
-                <a href="#" class="brand-logo">EM</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="#"><i class="material-icons">search</i></a></li>
-                    <li><a href="signin.html">Sign In</a></li>
-                    <li><a href="signup.html">Sign Up</a></li>
-                </ul>
+    <div class="navbar-fixed wow fadeInDown black-text home__nav">
+        <nav class="gradient__bg">
+            <div class="container">
+                <div class="nav-wrapper">
+                    <a href="index.html" class="brand-logo">EM</a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li><a href="#"><i class="material-icons">search</i></a></li>
+                        <li><a href="signin.html">Sign In</a></li>
+                        <li><a href="signup.html">Sign Up</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </div>
 
     <div class="header">
         <div class="header__overlay">
