--- a/template/signup.html
+++ b/template/signup.html
@@ -16,68 +16,61 @@
     <nav class="wow fadeInDown black-text gradient__bg">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo">EM</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="#"><i class="material-icons">search</i></a></li>
-                    <li><a href="signin.html">Sign In</a></li>
-                    <li><a href="signup.html">Sign Up</a></li>
-                </ul>
+                <a href="index.html" class="brand-logo center">EM</a>
+                <!--<ul id="nav-mobile" class="right hide-on-med-and-down">-->
+                    <!--<li><a href="#"><i class="material-icons">search</i></a></li>-->
+                    <!--<li><a href="signin.html">Sign In</a></li>-->
+                    <!--<li><a href="signup.html">Sign Up</a></li>-->
+                <!--</ul>-->
             </div>
         </div>
     </nav>
 
     <div class="signin__card_holdr">
         <div class="container">
-            <div class="container white z-depth-2">
-                <div class="col s12">
-                    <form class="col s12">
-                        <div class="form-container">
-                            <h5 class="teal-text">Sign up to eManager</h5>
-                            <div class="row">
-                                <div class="input-field col s6">
-                                    <input id="first_name" type="text" class="validate">
-                                    <label for="last_name">First Name</label>
-                                </div>
-                                <div class="input-field col s6">
-                                    <input id="last_name" type="text" class="validate">
-                                    <label for="last_name">Last Name</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input id="reg_email" type="email" class="validate">
-                                    <label for="reg_email">Email</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input id="email-confirm" type="email" class="validate">
-                                    <label for="email-confirm">Email Confirmation</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input id="reg_password" type="password" class="validate">
-                                    <label for="reg_password">Password</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input id="password-confirm" type="password" class="validate">
-                                    <label for="password-confirm">Password Confirmation</label>
-                                </div>
-                            </div>
-                            <div class="center-align">
-                                <button class="btn waves-effect waves-light teal" type="submit" name="action">Sign Up</button>
-                            </div>
+            <div class="row">
+                <form class="col s12" id="reg-form">
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="first_name" type="text" class="validate" required>
+                            <label for="first_name">First Name</label>
                         </div>
-                    </form>
-                </div>
+                        <div class="input-field col s6">
+                            <input id="last_name" type="text" class="validate" required>
+                            <label for="last_name">Last Name</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="email" type="email" class="validate" required>
+                            <label for="email">Email</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="password" type="password" class="validate" minlength="6" required>
+                            <label for="password">Password</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <button class="btn btn-large btn-register waves-effect waves-light" type="submit" name="action">Register
+                                <i class="material-icons right">done</i>
+                            </button>
+                        </div>
+
+                        <div class="input-field col s6 right-align">
+                            <a href="signin.html" title="sign in" class="ngl btn-floating btn-large waves-effect waves-light red"><i class="material-icons">input</i></a>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
 
-    <div class="footer">
+    <div class="empty"></div>
+
+    <div class="auth__footer footer">
         <div class="container">
             <div class="center-align">
                 <p>© 2017, All rights reserved.
