signin-page-v1 final commit

--- a/template/index.html
+++ b/template/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <div class="navbar-fixed wow fadeInDown black-text home__nav">
+    <div class="navbar-fixed home__nav">
         <nav class="gradient__bg">
             <div class="container">
                 <div class="nav-wrapper">
@@ -58,7 +58,7 @@
             <!--<h3>Latest Events</h3>-->
             <div class="row">
                 <div class="col s12 l4">
-                    <div class="card wow zoomIn">
+                    <div class="card wow fadeInUp">
                         <div class="card-image">
                             <img src="image/2.jpg">
                             <span class="card-title">A title for this event</span>
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="col s12 l4">
-                    <div class="card wow zoomIn">
+                    <div class="card wow fadeInUp">
                         <div class="card-image">
                             <img src="image/2.jpg">
                             <span class="card-title">A title for this event</span>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="col s12 l4">
-                    <div class="card wow zoomIn">
+                    <div class="card wow fadeInUp">
                         <div class="card-image">
                             <img src="image/2.jpg">
                             <span class="card-title">A title for this event</span>
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="col s12 l4">
-                    <div class="card wow zoomIn">
+                    <div class="card wow fadeInUp">
                         <div class="card-image">
                             <img src="image/2.jpg">
                             <span class="card-title">A title for this event</span>
@@ -118,7 +118,7 @@
                     </div>
                 </div>
                 <div class="col s12 l4">
-                    <div class="card wow zoomIn">
+                    <div class="card wow fadeInUp">
                         <div class="card-image">
                             <img src="image/2.jpg">
                             <span class="card-title">A title for this event</span>
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="col s12 l4">
-                    <div class="card wow zoomIn">
+                    <div class="card wow fadeInUp">
                         <div class="card-image">
                             <img src="image/2.jpg">
                             <span class="card-title">A title for this event</span>
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="col s12 l4">
-                    <div class="card wow zoomIn">
+                    <div class="card wow fadeInUp">
                         <div class="card-image">
                             <img src="image/2.jpg">
                             <span class="card-title">A title for this event</span>
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <div class="col s12 l4">
-                    <div class="card wow zoomIn">
+                    <div class="card wow fadeInUp">
                         <div class="card-image">
                             <img src="image/2.jpg">
                             <span class="card-title">A title for this event</span>
@@ -178,7 +178,7 @@
                     </div>
                 </div>
                 <div class="col s12 l4">
-                    <div class="card wow zoomIn">
+                    <div class="card wow fadeInUp">
                         <div class="card-image">
                             <img src="image/2.jpg">
                             <span class="card-title">A title for this event</span>
