--- a/template/css/main-css/main.sass
+++ b/template/css/main-css/main.sass
@@ -2,9 +2,12 @@
   height: 60vh
   position: relative
   background:
-    image: url('../image/1.jpg')
+    image: url('../image/3.jpg')
     size: cover
+    position: 100% 25%
     attachment: fixed
+    repeat: no-repeat
+
 
   .header__overlay
     width: 100%
@@ -56,7 +59,7 @@
     //top: 0
     //left: 0
     background:
-      image: url("../image/2.jpg")
+      image: url("../image/5.jpg")
       color: $rgbaBlack
       attachment: fixed
       repeat: no-repeat
