--- a/template/css/app.css
+++ b/template/css/app.css
@@ -29,9 +29,11 @@ nav {
 .header {
   height: 60vh;
   position: relative;
-  background-image: url("../image/1.jpg");
+  background-image: url("../image/3.jpg");
   background-size: cover;
-  background-attachment: fixed; }
+  background-position: 100% 25%;
+  background-attachment: fixed;
+  background-repeat: no-repeat; }
   .header .header__overlay {
     width: 100%;
     height: 60vh;
@@ -72,7 +74,7 @@ nav {
   .middle__info .brief__info {
     width: 100%;
     height: 100%;
-    background-image: url("../image/2.jpg");
+    background-image: url("../image/5.jpg");
     background-color: rgba(0, 0, 0, 0.5);
     background-attachment: fixed;
     background-repeat: no-repeat;
