--- a/template/index.html
+++ b/template/index.html
@@ -17,7 +17,7 @@
             <nav class="gradient__bg">
                 <div class="container">
                     <div class="nav-wrapper">
-                        <a href="index.html" class="brand-logo">EM</a>
+                        <a href="index.html" class="brand-logo">Boots EM</a>
                         <ul id="nav-mobile" class="right hide-on-med-and-down">
                             <li><a href="#"><i class="material-icons">search</i></a></li>
                             <li><a href="signin.html">Sign In</a></li>
@@ -33,7 +33,7 @@
                 <div class="container">
                     <nav class="wow fadeInDown">
                         <div class="nav-wrapper">
-                            <a href="#" class="brand-logo">EM</a>
+                            <a href="#" class="brand-logo">Boots EM</a>
                             <ul id="nav-mobile" class="right hide-on-med-and-down">
                                 <li><a href="#"><i class="material-icons">search</i></a></li>
                                 <li><a href="signin.html">Sign In</a></li>
@@ -45,7 +45,7 @@
                     <div class="center-align header__detail">
                         <h4 class="wow fadeInLeft">Worlds Leading Startup events</h4>
                         <p class="wow fadeInLeft">Attend Events around you and Add Events.</p>
-                        <a href="signup.html" class="btn blue lighten-2 waves-effect animated fadeInLeft">Sign Up</a>
+                        <a href="signup.html" class="btn blue lighten-2 waves-effect animated fadeInLeft">Join Boots Events Manager</a>
                     </div>
                 </div>
             </div>
@@ -198,45 +198,64 @@
         <!--End popular__event_holdr-->
 
 
-        <div class="middle__info">
-            <!--<div class="bg__overlay">-->
-                <!--<img src="image/2.jpg" alt="">-->
-            <!--</div>-->
-            <div class="brief__info">
-                <div class="container">
-                    <div class="center-align">
-                        <p>
-                        <h4>Do you want to Manage your Own Event?</h4>
-                        <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores,
-                            at aut consequuntur corporis culpa debitis dolores dolorum ducimus enim
-                            eos esse est eveniet excepturi expedita facilis illo incidunt inventore</small>
-                        <br />
-                        <a href="signup.html" class="btn waves-effect red darken-1">Sign Up</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
+        <div class="parallax-container">
+            <div class="parallax"><img src="image/5.jpg"></div>
         </div>
 
+        <!--<div class="middle__info">-->
+            <!--&lt;!&ndash;<div class="bg__overlay">&ndash;&gt;-->
+                <!--&lt;!&ndash;<img src="image/2.jpg" alt="">&ndash;&gt;-->
+            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+            <!--<div class="brief__info">-->
+                <!--<div class="container">-->
+                    <!--<div class="center-align">-->
+                        <!--<p>-->
+                        <!--<h4>Do you want to Manage your Own Event?</h4>-->
+                        <!--<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores,-->
+                            <!--at aut consequuntur corporis culpa debitis dolores dolorum ducimus enim-->
+                            <!--eos esse est eveniet excepturi expedita facilis illo incidunt inventore</small>-->
+                        <!--<br />-->
+                        <!--<a href="signup.html" class="btn waves-effect red darken-1">Sign Up</a>-->
+                        <!--</p>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
 
+        <div class="fixed-action-btn wow zoomIn">
+            <a class="btn-floating btn-large red" style="position:static;">
+                <i class="large material-icons">mode_edit</i>
+            </a>
+            <ul>
+                <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+                <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+                <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+                <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+            </ul>
+        </div>
 
         <div class="footer">
             <div class="container">
                 <div class="center-align">
                     <p>© 2017, All rights reserved.
-                        <a href="#">Events Manager</a>
+                        <a href="#">Boots Events Manager</a>
                     </p>
                 </div>
             </div>
         </div>
 
-        <script src="js/jquery-2.1.4.min.js"></script>
-        <script src="js/materialize.js"></script>
+        <script src="js/jquery-3.2.1.min.js"></script>
+        <script src="js/materialize.min.js"></script>
         <script src="js/wow.min.js"></script>
         <script src="js/main.js"></script>
         <script>
             $(document).ready(function(){
                 new WOW().init();
+                $('.parallax').parallax();
+                $('.fixed-action-btn').openFAB();
+                $('.fixed-action-btn').closeFAB();
+                $('.fixed-action-btn.toolbar').openToolbar();
+                $('.fixed-action-btn.toolbar').closeToolbar();
             });
         </script>
     </body>
