--- a/template/signup.html
+++ b/template/signup.html
@@ -16,12 +16,7 @@
     <nav class="wow fadeInDown black-text gradient__bg">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="index.html" class="brand-logo center">EM</a>
-                <!--<ul id="nav-mobile" class="right hide-on-med-and-down">-->
-                    <!--<li><a href="#"><i class="material-icons">search</i></a></li>-->
-                    <!--<li><a href="signin.html">Sign In</a></li>-->
-                    <!--<li><a href="signup.html">Sign Up</a></li>-->
-                <!--</ul>-->
+                <a href="index.html" class="brand-logo center">Boots EM</a>
             </div>
         </div>
     </nav>
@@ -74,14 +69,14 @@
         <div class="container">
             <div class="center-align">
                 <p>© 2017, All rights reserved.
-                    <a href="#">Events Manager</a>
+                    <a href="#">Boots Events Manager</a>
                 </p>
             </div>
         </div>
     </div>
 
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/materialize.js"></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/materialize.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
     <script>
