--- a/template/css/overwrite/overwrite.sass
+++ b/template/css/overwrite/overwrite.sass
@@ -18,3 +18,16 @@ nav
   @include pad(14px !important)
   font:
     size: 20px !important
+
+.parallax-container
+  height: auto !important
+  color: $white
+
+  .container
+    .center-align
+      p
+        @include pad(15px)
+
+  .parallax
+    img
+      opacity: 1 !important
