--- a/template/index.html
+++ b/template/index.html
@@ -360,10 +360,8 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="bg__white z-depth-1">
-            hello w
-        </div>
+    <div class="search__results bg__white z-depth-1">
+        hello w
     </div>
 </div>
 
