add and delete events button-v

--- a/template/index.html
+++ b/template/index.html
@@ -63,8 +63,10 @@
                 <div class="col s12 l4">
                     <div class="card wow fadeInUp">
                         <div class="card-image">
-                            <img class="activator" src="image/2.jpg">
-                            <span class="card-title">A title for this event</span>
+                            <a href="">
+                                <img src="image/2.jpg">
+                                <span class="card-title">A title for this event</span>
+                            </a>
                             <a class="btn-floating halfway-fab waves-effect waves-light red tooltipped"
                                data-position="bottom" data-tooltip="share">
                                 <i class="material-icons">share</i>
@@ -76,7 +78,7 @@
                                     class="material-icons right pointer">more_vert</i></small>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">A title for this event<i
+                            <span class="card-title grey-text text-darken-4"><a href="">A title for this event</a><i
                                     class="material-icons right">close</i></span>
                             <small>Here is some more information about this product that is only revealed once clicked
                                 on.
@@ -303,7 +305,7 @@
 
     <div class="fixed-action-btn wow zoomIn">
         <a class="btn-floating btn-large red" style="position:static;">
-            <i class="large material-icons">mode_edit</i>
+            <i class="large material-icons">more_vert</i>
         </a>
         <ul>
             <li><a href="#add_event_modal" class="tooltipped modal-trigger btn-floating green" data-position="left"
