--- a/template/css/overwrite/overwrite.sass
+++ b/template/css/overwrite/overwrite.sass
@@ -9,6 +9,23 @@ nav
       background:
         color: rgba(0, 0, 0, .5) !important
 
+.logo
+  width: 250px
+  background:
+    image: url("../image/logo.png")
+    size: contain
+    repeat: no-repeat
+    position: 60%
+  align-items: -100px
+
+  p
+    margin: 0
+    position: relative
+    top: -1000px
+
+.hidden
+  display: none
+
 .pointer
   cursor: pointer !important
 
@@ -57,3 +74,6 @@ nav
 .search__nav
   background:
     color: $white !important
+
+#add_event_modal
+  width: 50% !important
