--- a/template/signup.html
+++ b/template/signup.html
@@ -16,7 +16,9 @@
     <nav class="wow fadeInDown black-text gradient__bg">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="index.html" class="brand-logo center">Boots EM</a>
+                <a href="index.html" class="brand-logo center logo">
+                    <p>Boots EM</p>
+                </a>
             </div>
         </div>
     </nav>
