--- a/template/css/main-css/main.sass
+++ b/template/css/main-css/main.sass
@@ -81,3 +81,11 @@
 
     &:hover
       text-decoration: underline !important
+
+.select_img_box
+  width: 200px
+  height: 100px
+  background:
+    color: #f5f5f5
+  border:
+    radius: 3px
