--- a/template/index.html
+++ b/template/index.html
@@ -8,10 +8,10 @@
     <title>Event Manager</title>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/frameworks/ghpages-materialize.css">
-    <!--<link rel="stylesheet" href="css/materialize.min.css">-->
     <link href="css/frameworks/micon.css" rel="stylesheet">
     <link href="css/frameworks/animate.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" href="image/fav.ico">
 </head>
 <body>
 <div class="body__holdr">
@@ -19,7 +19,9 @@
         <nav class="gradient__bg">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="index.html" class="brand-logo">Boots EM</a>
+                    <a href="index.html" class="brand-logo logo">
+                        <p>Boots EM</p>
+                    </a>
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
                         <li><a href="#search__modal" class="modal-trigger waves-effect" id="search__view"><i class="material-icons">search</i></a></li>
                         <li><a href="signin.html">Sign In</a></li>
@@ -35,7 +37,9 @@
             <div class="container">
                 <nav class="wow fadeInDown">
                     <div class="nav-wrapper">
-                        <a href="index.html" class="brand-logo">Boots EM</a>
+                        <a href="index.html" class="brand-logo logo">
+                            <p>Boots EM</p>
+                        </a>
                         <ul id="nav-mobile" class="right hide-on-med-and-down">
                             <li><a href="#search__modal" class="modal-trigger waves-effect" id="search__view"><i class="material-icons">search</i></a></li>
                             <li><a href="signin.html">Sign In</a></li>
@@ -330,7 +334,44 @@
 <div id="add_event_modal" class="modal modal-fixed-footer">
     <div class="modal-content">
         <h4>Create Event</h4>
-        <p>A bunch of text</p>
+        <div class="row">
+            <form class="col s12" id="add-event-form">
+                <div class="row">
+                    <div class="col s6">
+                        <div class="select_img_box"></div>
+                        <input id="first_name" type="file" class="hidden validate" required>
+                        <!--<label for="first_name">First Name</label>-->
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="event_title" type="text" class="validate" required>
+                        <label for="event_title">Title</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="location" type="text" class="validate" required>
+                        <label for="location">Location</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <label for="description">Description</label>
+                        <textarea id="description" type="text" class="materialize-textarea validate" required></textarea>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <button class="btn btn-large btn-register waves-effect waves-light" type="submit" name="action">Register
+                            <i class="material-icons right">done</i>
+                        </button>
+                    </div>
+
+                    <div class="input-field col s6 right-align">
+                        <a href="signin.html" title="sign in" class="ngl btn-floating btn-large waves-effect waves-light red"><i class="material-icons">input</i></a>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
     <div class="modal-footer">
         <a href="#!" class="modal-action modal-close waves-effect btn-flat">Cancel</a>
