--- a/template/signin.html
+++ b/template/signin.html
@@ -16,7 +16,9 @@
     <nav class="wow fadeInDown black-text gradient__bg">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="index.html" class="brand-logo center">Boots EM</a>
+                <a href="index.html" class="brand-logo center logo">
+                    <p>Boots EM</p>
+                </a>
                 <!--<ul id="nav-mobile" class="right hide-on-med-and-down">-->
                     <!--<li><a href="#"><i class="material-icons">search</i></a></li>-->
                     <!--<li><a href="signin.html">Sign In</a></li>-->
